--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "web-keyload",
   "version": "0.0.0",
+  "homepage": "https://kbzo1997.github.io/web-keyload/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "deploy": "npm run build && gh-pages -d dist/web-keyload/browser",
+    "watch": "ng build --watch --configuration development",    
     "test": "ng test"
   },
   "private": true,
@@ -18,6 +20,8 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@angular/service-worker": "^18.2.0",
+    "gh-pages": "^6.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
